# aliyunctf-2022-challenges

dddddddd/: .gitignore  0001-d8-Remove-builtins-for-read-file-execute-command-fro.patch  0002-Revert-Revert-Revert-Rollback-Reland-Rollback-Revert.patch  Dockerfile.deploy  Makefile  docker-compose.yaml  gen.js  pack-release.sh  readflag.c  solve.py
dddddddd/deploy/: docker-compose.yaml  flag
dddddddd/docs/: BUILD.md  deploy.md  writeup.md  题目基本信息.xlsx
dddddddd/nixv8/: default.nix
happyropeware/: Cargo.toml  build.rs  note.txt
happyropeware/scripts/: acquire.bat  custom.txt
happyropeware/src/: cipher.rs  key_mgmt.rs  main.rs
hitori/: .bazelrc  .gitignore  BUILD  Dockerfile  WORKSPACE  canvas.cc  canvas.h  docker-compose.yaml  main.cc  plugin.h  plugin_manager.cc  plugin_manager.h
hitori/assets/: BUILD  README.txt
hitori/bazel/: BUILD  fmt.BUILD  mdspan.BUILD  spng.BUILD
hitori/deploy/: BUILD  flag  prepare.sh
hitori/docs/: BUILD  BUILD.md  writeup.md  题目基本信息.xlsx
hitori/plugins/: BUILD  a.cc  a.h  automagical_edge_detector.cc  automagical_edge_detector.h  b.cc  b.h  c.cc  c.h  cloudy_clear.cc  color_converter.cc  color_converter.h  cutting_edge.cc  d.cc  d.h  e.cc  e.h  edge_detector.cc  edge_detector.h  enhancer.cc  enhancer.h  extremely_accessible.cc  f.cc  f.h  filter_a.cc  filter_b.cc  filter_c.cc  filter_d.cc  gaussian_blur.cc  gaussian_blur.h  histogram_equalization.cc  histogram_equalization.h  image_utils.cc  image_utils.h  laplacian.cc  laplacian.h  median_filter.cc  median_filter.h  mtxx.cc  overdose.cc  (+2 more)
lyla/: .gitignore  Makefile  backdoor.s  check_inject_fini.s  inject_backdoor.py  main.cc  pack-release.sh  solve.py  speck.cc  speck.h  speck_test.cc  test-chall.sh  test-image.sh
lyla/deploy/: Dockerfile  docker-compose.yaml  flag
lyla/docs/: BUILD.md  deploy.md  writeup.md  题目基本信息.xlsx
lyra/: .gitignore  Dockerfile.deploy  Makefile  backdoor.s  check_inject_fini.s  compile_flags.txt  dummy_reloc_entry.cc  inject_backdoor.py  ldscript  main.cc  pack-release.sh  requirements.txt  sanity_check.py  solve.py  speck.cc  speck.h  speck_test.cc  test-chall.sh  test-image.sh
lyra/deploy/: Dockerfile  docker-compose.yaml  start.sh
lyra/docs/: BUILD.md  writeup.md  题目基本信息.xlsx
warmup-checkin/: .dockerignore  Dockerfile  docker-compose.yaml  note.txt  playground.py  pyproject.toml
warmup-checkin/frontend/: package.json  tailwind.config.cjs  vite.config.js
warmup-checkin/frontend/src/: App.vue  main.js
warmup-checkin/scripts/: playground.py  prestart.sh
warmup-checkin/static/: index.js  main.css  nvccfg.js
warmup-checkin/templates/: index.html  login.html
warmup-checkin/ws8k/: app.py  bot_detect.py  chatgpt.py  content_moderation.py  logging.py  settings.py
