[package]
name = "happyropeware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.10.1"
anyhow = "1.0.68"
widestring = "1.0.2"
blake3 = "1.3.3"
directories = "4.0.1"
thiserror = "1.0.38"
zeroize = "1.5.7"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_WindowsProgramming",
    "Win32_Security_Cryptography",
]

[build-dependencies]
embed-manifest = "1.3.1"
