[tool.poetry]
name = "warmup-checkin"
version = "0.1.0"
description = ""
authors = ["Riatre Foo <foo@riat.re>"]
readme = "README.md"
packages = [{include = "warmup_checkin"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
