[tool.poetry]
name = "warmup-checkin"
version = "0.1.0"
description = ""
authors = ["Riatre Foo <foo@riat.re>"]
readme = "README.md"
packages = [{include = "ws8k"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.2"
tiktoken = "^0.3.2"
starlette = "^0.26.1"
uvicorn = "^0.21.1"
itsdangerous = "^2.1.2"
starlette-session = "^0.4.3"
slowapi = "^0.1.7"
redis = "^4.5.3"
typing-extensions = "^4.5.0"
jinja2 = "^3.1.2"
alibabacloud-green20220302 = "^1.0.4"
aiohttp = "^3.8.4"
alibabacloud-afs20180112 = { file = "vendor/alibabacloud_afs20180112-1.0.0-py3-none-any.whl" }
starlette-context = "^0.3.6"
structlog = "^22.3.0"
aiohttp-socks = "^0.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
